--- a/syncfusion-practice/src/app/scheduler/scheduler.component.css
+++ b/syncfusion-practice/src/app/scheduler/scheduler.component.css
@@ -27,6 +27,66 @@
 
 
 
+
+
+.e-schedule .e-schedule-table {
+    border: 0 none;
+    border-collapse: separate;
+    border-spacing: 0;
+    margin: 0;
+    table-layout: fixed;
+    width: auto !important;
+}
+
+.e-schedule .e-timeline-month-view .e-date-header-wrap {
+  font-size: 13px;
+  overflow: hidden;
+  position: relative;
+  width: 1072px;
+}
+
+
+
+.e-toolbar {
+  border-radius: 0;
+  display: block;
+  height: 42px;
+  min-height: 42px;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 1272px !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   .e-schedule .e-resource-cells {
     height: 30px !important;   
     width: 200px !important;    
@@ -39,7 +99,7 @@
   overflow: hidden;        
   text-overflow: ellipsis; 
   height: 27px !important; 
-  width: 150px !important; 
+  width: 200px !important; 
   min-width: 150px !important; 
 }
 
