--- a/syncfusion-practice/src/app/scheduler/scheduler.component.css
+++ b/syncfusion-practice/src/app/scheduler/scheduler.component.css
@@ -1,4 +1,4 @@
-.e-schedule .e-work-cells {
+/* .e-schedule .e-work-cells {
     height: 30px !important;   
     width: 87px !important;    
   }
@@ -120,14 +120,14 @@ schedule .e-timeline-month-view .e-resource-cells {
   padding-left: 15px;
   padding-right: 0;
   vertical-align: middle;
-}
+} */
 
 
-.e-schedule .e-work-cells,
+/*.e-schedule .e-work-cells,
 .e-schedule .e-all-day-cells {
   height: 30px !important;
   /*width: 50px !important;*/
-}
+/*}*/
 
   
 
@@ -140,7 +140,7 @@ schedule .e-timeline-month-view .e-resource-cells {
 
 
 
-.e-schedule .e-appointment {
+/* .e-schedule .e-appointment {
   height: auto !important;  
   max-height: 26px !important;  
   white-space: nowrap;      
@@ -159,14 +159,26 @@ schedule .e-timeline-month-view .e-resource-cells {
 .e-schedule .e-all-day-cells {
   height: 27px !important;  
 }
+ */
 
 
 
 
-
-
-
-
-
-
-  
+ .schedule-cell-dimension.e-schedule .e-vertical-view .e-date-header-wrap table col,
+ .schedule-cell-dimension.e-schedule .e-vertical-view .e-content-wrap table col {
+     width: 200px;
+ }
+ 
+ .schedule-cell-dimension.e-schedule .e-vertical-view .e-time-cells-wrap table td,
+ .schedule-cell-dimension.e-schedule .e-vertical-view .e-work-cells {
+     height: 100px;
+ }
+ 
+ .schedule-cell-dimension.e-schedule .e-month-view .e-work-cells,
+ .schedule-cell-dimension.e-schedule .e-month-view .e-date-header-wrap table col {
+     width: 200px;
+ }
+ 
+ .schedule-cell-dimension.e-schedule .e-month-view .e-work-cells {
+     height: 200px;
+ }
