--- a/syncfusion-practice/src/app/scheduler/scheduler.component.html
+++ b/syncfusion-practice/src/app/scheduler/scheduler.component.html
@@ -1,7 +1,6 @@
-<ejs-schedule width='100px' cssClass='virtual-scrolling' height='700px' [group]="group" [selectedDate]="selectedDate" [eventSettings]="eventSettings" #scheduleObj [height]="800"[width]="2500"(dataBound)="onDataBound()">
+<ejs-schedule #scheduleObj width='100%' height='900px' cssClass='schedule-cell-dimension virtual-scrollin' [rowAutoHeight]="true" [group]="group" [selectedDate]="selectedDate" [eventSettings]="eventSettings" >
     <e-resources>
-      <e-resource field='ResourceId' title='Resource' [dataSource]='resourceDataSource' [allowMultiple]='allowMultiple'
-        name='Resources' textField='Text' idField='Id' colorField='Color'>
+      <e-resource field='ResourceId' title='Resource' [dataSource]='resourceDataSource' [allowMultiple]='allowMultiple' name='Resources' textField='Text' idField='Id' colorField='Color'>
       </e-resource>
     </e-resources>
     <e-views>
