minor tweks in code of scheduler

--- a/syncfusion-practice/src/app/scheduler/scheduler.component.css
+++ b/syncfusion-practice/src/app/scheduler/scheduler.component.css
@@ -1,184 +1,16 @@
-/* .e-schedule .e-work-cells {
-    height: 30px !important;   
-    width: 87px !important;    
-  }
-  
-
-  .e-schedule .e-all-day-cells {
-    height: 30px !important;   
-    width: 87px !important;    
-  }
-  
-
-  .e-schedule .e-header-cells {
-    height: 30px !important;   
-    width: 87px !important;    
-  }
-  
-  .e-schedule .e-content-table {
-    height: auto !important;
-    width: auto !important;
-  }
-
-
-
-
-
-
-
-
-
-
-.e-schedule .e-schedule-table {
-    border: 0 none;
-    border-collapse: separate;
-    border-spacing: 0;
-    margin: 0;
-    table-layout: fixed;
-    width: auto !important;
+.schedule-cell-dimension.e-schedule .e-timeline-month-view .e-resource-cells-wrap table col,
+.schedule-cell-dimension.e-schedule .e-timeline-month-view .e-date-header-wrap table col,
+.schedule-cell-dimension.e-schedule .e-timeline-month-view .e-content-wrap table col {
+    width: calc(100% / 31) !important; 
 }
 
-.e-schedule .e-timeline-month-view .e-date-header-wrap {
-  font-size: 13px;
-  overflow: hidden;
-  position: relative;
-  width: 1072px;
+.schedule-cell-dimension.e-schedule .e-timeline-month-view .e-work-cells,
+.schedule-cell-dimension.e-schedule .e-timeline-month-view .e-date-header-wrap table col,
+.schedule-cell-dimension.e-schedule .e-timeline-month-view .e-resource-cells-wrap table col {
+    width: calc(100% / 31) !important; 
 }
 
-
-
-.e-toolbar {
-  border-radius: 0;
-  display: block;
-  height: 42px;
-  min-height: 42px;
-  position: relative;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 1272px !important;
+.schedule-cell-dimension.e-schedule .e-timeline-month-view .e-resource-cells,
+.schedule-cell-dimension.e-schedule .e-timeline-month-view .e-work-cells {
+    height: 2.6rem !important;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  .e-schedule .e-resource-cells {
-    height: 30px !important;   
-    width: 200px !important;    
-    min-width: 100px !important; 
-  }
-  
-
-.e-schedule .e-resource-cells {
-  white-space: nowrap;     
-  overflow: hidden;        
-  text-overflow: ellipsis; 
-  height: 27px !important; 
-  width: 200px !important; 
-  min-width: 150px !important; 
-}
-
-
-.e-schedule .e-resource-column-wrap {
-  width: 150px !important;   
-  min-width: 200px !important; 
-}
-
-
-schedule .e-timeline-month-view .e-resource-cells {
-  background: #fafafa;
-  border-color: rgba(0, 0, 0, 0.12);
-  border-style: solid;
-  border-width: 0 1px 1px 0;
-  color: rgba(0, 0, 0, 0.87);
-  height: 50px;
-  padding-left: 15px;
-  padding-right: 0;
-  vertical-align: middle;
-} */
-
-
-/*.e-schedule .e-work-cells,
-.e-schedule .e-all-day-cells {
-  height: 30px !important;
-  /*width: 50px !important;*/
-/*}*/
-
-  
-
-
-
-
-
-
-
-
-
-
-/* .e-schedule .e-appointment {
-  height: auto !important;  
-  max-height: 26px !important;  
-  white-space: nowrap;      
-  overflow: hidden;         
-  text-overflow: ellipsis;
-  margin-top: -2px;
-}
-
-
-.e-schedule .e-resource-cells {
-  min-height: 10px !important; 
-}
-
-
-.e-schedule .e-work-cells,
-.e-schedule .e-all-day-cells {
-  height: 27px !important;  
-}
- */
-
-
-
-
- .schedule-cell-dimension.e-schedule .e-vertical-view .e-date-header-wrap table col,
- .schedule-cell-dimension.e-schedule .e-vertical-view .e-content-wrap table col {
-     width: 200px;
- }
- 
- .schedule-cell-dimension.e-schedule .e-vertical-view .e-time-cells-wrap table td,
- .schedule-cell-dimension.e-schedule .e-vertical-view .e-work-cells {
-     height: 100px;
- }
- 
- .schedule-cell-dimension.e-schedule .e-month-view .e-work-cells,
- .schedule-cell-dimension.e-schedule .e-month-view .e-date-header-wrap table col {
-     width: 200px;
- }
- 
- .schedule-cell-dimension.e-schedule .e-month-view .e-work-cells {
-     height: 200px;
- }
