--- a/syncfusion-practice/src/app/scheduler/scheduler.component.html
+++ b/syncfusion-practice/src/app/scheduler/scheduler.component.html
@@ -1,9 +1,14 @@
-<ejs-schedule #scheduleObj width='100%' height='638px' cssClass='schedule-cell-dimension virtual-scrollin' [rowAutoHeight]="true" [group]="group" [selectedDate]="selectedDate" [eventSettings]="eventSettings"  >
+<ejs-schedule #scheduleObj width='100%' height='638px' cssClass='schedule-cell-dimension virtual-scrollin' [rowAutoHeight]="true" [group]="group" [selectedDate]="selectedDate" [eventSettings]="eventSettings"   [currentView]="currentView"
+(actionBegin)="onActionBegin($event)"
+(actionComplete)="onActionComplete($event)"
+>
     <e-resources>
       <e-resource field='ResourceId' title='Resource' [dataSource]='resourceDataSource' [allowMultiple]='allowMultiple' name='Resources' textField='Text' idField='Id' colorField='Color'>
       </e-resource>
     </e-resources>
     <e-views>
+      <e-view option="Week" [allowVirtualScrolling]="virtualscroll"></e-view> 
+      <e-view option="Day" [allowVirtualScrolling]="virtualscroll"></e-view>
       <e-view option="TimelineMonth" [allowVirtualScrolling]="virtualscroll" isSelected=true></e-view>
       <e-view option="TimelineYear" [allowVirtualScrolling]="virtualscroll" orientation="Vertical"></e-view>
     </e-views>
