--- a/third-angular-project/src/app/shared/button/button.component.html
+++ b/third-angular-project/src/app/shared/button/button.component.html
@@ -1,4 +1,6 @@
-    <span>
+<span>
     <ng-content />
-    </span>
-    <ng-content select=".icon" />
+  </span>
+  <span class="icon">
+    <ng-content select="icon" />
+  </span>
