--- a/syncfusion-practice/src/app/scheduler/scheduler.component.html
+++ b/syncfusion-practice/src/app/scheduler/scheduler.component.html
@@ -1,6 +1,9 @@
 <ejs-schedule #scheduleObj width='100%' height='638px' cssClass='schedule-cell-dimension virtual-scrollin' [rowAutoHeight]="true" [group]="group" [selectedDate]="selectedDate" [eventSettings]="eventSettings"   [currentView]="currentView"
 (actionBegin)="onActionBegin($event)"
 (actionComplete)="onActionComplete($event)"
+(resizeStart)="onResizeStart($event)" 
+(resizing)="onResizing($event)" 
+(resizeStop)="onResizeStop($event)"
 >
     <e-resources>
       <e-resource field='ResourceId' title='Resource' [dataSource]='resourceDataSource' [allowMultiple]='allowMultiple' name='Resources' textField='Text' idField='Id' colorField='Color'>
