--- a/third-angular-project/src/app/dashboard/header/header.component.html
+++ b/third-angular-project/src/app/dashboard/header/header.component.html
@@ -14,6 +14,7 @@
         <li>
           <button appButton>
             Logout
+            <span ngProjectAs="icon">→</span>
           </button>
 
         </li>
